[gd_scene load_steps=7 format=3 uid="uid://x01gco3o4wph"]

[ext_resource type="Script" path="res://survivor_game.gd" id="1_ldg0g"]
[ext_resource type="PackedScene" uid="uid://78uko0txto53" path="res://characters/player.tscn" id="1_nhbjr"]
[ext_resource type="PackedScene" uid="uid://bmho8hv4bwk0t" path="res://UI/letter_scroll.tscn" id="2_rcax5"]
[ext_resource type="PackedScene" uid="uid://6b43w5bxed88" path="res://trees/PineTree.tscn" id="3_gk28e"]
[ext_resource type="PackedScene" uid="uid://bhrrcwsqhpjs0" path="res://UI/screen_ui.tscn" id="5_yi7yb"]

[sub_resource type="Curve2D" id="Curve2D_x7nkw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1133, -710, 0, 0, 0, 0, -1051, 969, 0, 0, 0, 0, 1066, 808, 0, 0, 0, 0, 631, -506, 0, 0, 0, 0, -10, -995, 0, 0, 0, 0, -655, -752, 0, 0, 0, 0, -1133, -710)
}
point_count = 7

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ldg0g")

[node name="ScreenUI" type="CanvasLayer" parent="."]

[node name="ScreenControl" parent="ScreenUI" instance=ExtResource("5_yi7yb")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InGameUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 3
visible = false

[node name="LetterScroll" parent="InGameUI" instance=ExtResource("2_rcax5")]
position = Vector2(2, 2)

[node name="BackgroundColor" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="BackgroundColor"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.49, 0.327075, 0.2107, 1)

[node name="PlayerCharacter" parent="." instance=ExtResource("1_nhbjr")]
position = Vector2(0, 2)

[node name="Path2D" type="Path2D" parent="PlayerCharacter"]
position = Vector2(0, -2)
curve = SubResource("Curve2D_x7nkw")

[node name="PathFollow2D" type="PathFollow2D" parent="PlayerCharacter/Path2D"]
unique_name_in_owner = true
position = Vector2(-1133, -710)
rotation = 1.522

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5

[node name="Environment" type="Node" parent="."]

[node name="StaticBody2D" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(96, 467)

[node name="StaticBody2D2" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(142, -499)

[node name="StaticBody2D3" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(171, 663)

[node name="StaticBody2D4" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(752, 220)

[node name="StaticBody2D5" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(560, 512)

[node name="StaticBody2D12" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(239, 314)

[node name="StaticBody2D13" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(281, -285)

[node name="StaticBody2D6" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(556, 282)

[node name="StaticBody2D7" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(403, 721)

[node name="StaticBody2D15" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(-658, -45)

[node name="StaticBody2D8" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(-586, 606)

[node name="StaticBody2D9" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(735, 714)

[node name="StaticBody2D10" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(773, 329)

[node name="StaticBody2D14" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(-535, -264)

[node name="StaticBody2D11" parent="Environment" instance=ExtResource("3_gk28e")]
position = Vector2(-217, -314)

[connection signal="game_over" from="." to="ScreenUI/ScreenControl" method="_on_game_game_over"]
[connection signal="start_button" from="ScreenUI/ScreenControl" to="." method="_on_screen_ui_start_button"]
[connection signal="finish_letter" from="InGameUI/LetterScroll" to="." method="_on_letter_scroll_finish_letter"]
[connection signal="finish_word" from="InGameUI/LetterScroll" to="PlayerCharacter" method="_on_letter_scroll_finish_word"]
[connection signal="health_depleted" from="PlayerCharacter" to="." method="_on_player_character_health_depleted"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
